feat: 교사 추천도서 독서록 개수 조회 기능 구현